# datadelver.github.io

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CNAME  Gemfile  NEWSLETTER_SETUP.md  README.md  _config.yml  about.html  archives.html  categories.html  feed.xml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  fix_rss_template.py  hello.py  index.html  justfile  mkdocs.yml  pyproject.toml  robots.txt  sitemap.xml  start-here.html  tags.html  tags.json
_posts/: 2023-10-31-welcome-to-jekyll.markdown  2023-11-06-hello-labyrinth.md  2023-12-03-production-notebooks.md  2023-12-10-production-notebooks.md  2023-12-16-ml-resources.md  2023-12-23-ml-resources.md  2024-1-27-linux-fun.md  2024-3-30-ml-engineer.md  2024-4-27-ml-engineer.md  2024-6-29-pi-fullscreen.md  2025-1-25-ml-micro-part-one.md  2025-1-26-ml-micro-part-one.md  2025-2-16-ml-micro-part-three.md  2025-2-2-ml-micro-part-two.md  2025-2-5-ml-micro-part-two.md  2025-2-8-ml-micro-part-three.md
archive/: 2023.html  2024.html  2025.html  2026.html
category/: ai.html  data-science.html  meta.html  ml-engineering.html  software-engineering.html
deployment/: build.sh
docs/: .authors.yml  NEWSLETTER_SETUP.md  about.md  index.md  start-here.md
hooks/: convert_banners.py  convert_images.py  validate_post_dates.py
javascripts/: extra.js
overrides/: 404.html  blog-post.html  home.html  series.html
plugins/: __init__.py  banner_alt.py  excerpt_description.py  json_ld.py  lazy_images.py  newsletter_embed.py  page_utils.py  related_posts.py  (+4 more)
(+122 files in other folders)
