[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datadelver"
version = "0.1.0"
description = "A blog exploring Data Science, Machine Learning, and MLOps"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click==8.2.1",
    "mkdocs-material[imaging]>=9.7.6",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-rss-plugin @ git+https://github.com/Zerthick/mkdocs-rss-plugin.git@fix/rss-validation-errors",
]

[project.optional-dependencies]
dev = [
    "mdformat>=0.7.21",
    "mdformat-frontmatter>=2.0.8",
    "mdformat-mkdocs>=3.0.1",
    "pre-commit>=4.2.0",
]

[tool.setuptools.packages.find]
include = ["plugins*"]

[tool.ruff.format]
preview = true

[project.entry-points."mkdocs.plugins"]
banner_alt = "plugins.banner_alt:BannerAltPlugin"
excerpt_description = "plugins.excerpt_description:ExcerptDescriptionPlugin"
json_ld = "plugins.json_ld:JsonLdPlugin"
lazy_images = "plugins.lazy_images:LazyImagesPlugin"
related_posts = "plugins.related_posts:RelatedPostsPlugin"
repo_cta = "plugins.repo_cta:RepoCtaPlugin"
series_nav = "plugins.series_nav:SeriesNavPlugin"
newsletter_embed = "plugins.newsletter_embed:NewsletterEmbedPlugin"
social_card_title = "plugins.social_card_title:SocialCardTitlePlugin"
